# LiuStudy-common

./: .clang-format  README.md
001/: hello.cpp  hello.py
002_motor/_cpp/: Control.cpp  ObtainError.cpp  main.cpp
002_motor/_h/: Control.h  ObtainError.h
02_motor/: Console.cpp  Console.h  Control.cpp  Control.h  main.cpp
02_mutex/: main.cpp
03_detect_color_bv_cv/src/: CMakeLists.txt  detect_color.cpp
03_tracker/trackerParam_ws/src/tracker_params/: CMakeLists.txt  package.xml
03_tracker/trackerParam_ws/src/tracker_params/config/: params.yaml
03_tracker/trackerParam_ws/src/tracker_params/src/: founder_node.cpp  tracker_node.cpp
04_CameraCalibration/: CMakeLists.txt
04_CameraCalibration/src/: Calibration.cpp
04_gammaTrans/src/: CMakeLists.txt  main.cpp
04_pnp1/: CMakeLists.txt
04_pnp1/src/: main.cpp
05_ArmorRecognition/: CMakeLists.txt
05_ArmorRecognition/src/: main.cpp  recognition.cpp  recognition.h
code/_cpp/: Console.cpp
code/_h/: Console.h
communication/: client.py  service.py
