<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracker_params</name>
  <version>0.0.1</version>
  <description>ROS 2 package for managing tracker parameters</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
<depend>ament_index_cpp</depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>